--- a/.gitignore
+++ b/.gitignore
@@ -176,8 +176,8 @@ dist
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
-plugin.js
-plugin.js.map
+plugin.esm.js
+plugin.esm.js.map
 plugin.cjs
 
 yarn.lock
