--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "name": "rollup-plugin-tampermonkey-header",
   "version": "0.1.0",
   "description": "A rollup plugin which can auto-generate UserScript Header, by extract information from package.json and code",
-  "main": "index.js",
+  "main": "plugin.cjs",
+  "module": "plugin.esm.js",
   "author": "Curly Brackets<water.curly@outlook.com>",
   "license": "MIT",
+  "files": [
+    "plugin.cjs",
+    "plugin.esm.js"
+  ],
   "devDependencies": {
     "@rollup/pluginutils": "^4.1.1",
     "esbuild": "^0.13.8",
     "estree-walker": "^3.0.0",
     "get-pkg-repo": "^5.0.0",
     "is-reference": "^3.0.0",
-    "rollup": "^2.58.0"
+    "rollup": "^2.58.0",
+    "minimist": "^1.2.5"
   },
   "scripts": {
-    "build": "esbuild --bundle src/index.js --format=esm --platform=node --outfile=plugin.js",
-    "dev": "esbuild --bundle src/index.js --format=esm --platform=node --outfile=plugin.js --watch --sourcemap"
+    "build": "node ./esbuild.js",
+    "dev": "node ./esbuild.js --development --format=esm"
   },
   "engines": {
     "node": ">=14.0.0"
