feat: support transform options & generate api

--- a/.gitignore
+++ b/.gitignore
@@ -176,8 +176,9 @@ dist
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
-plugin.esm.js
-plugin.esm.js.map
-plugin.cjs
+plugin.*.js
+plugin.*.js.*
+plugin.*.cjs
+plugin.*.cjs.*
 
 yarn.lock
