--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollup-plugin-tampermonkey-header",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A rollup plugin which can auto-generate UserScript Header, by extract information from package.json and code",
   "main": "plugin.cjs",
   "module": "plugin.esm.js",
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "build": "node ./esbuild.js",
-    "dev": "node ./esbuild.js --development --format=esm"
+    "dev": "node ./esbuild.js --development --format=cjs"
   },
   "engines": {
     "node": ">=14.0.0"
