build: correct package publish registry

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "node": ">=14.0.0"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org"
+    "registry": "https://registry.npmjs.com"
   }
 }
