--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "rollup-plugin-tampermonkey-header",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "A rollup plugin which can auto-generate UserScript Header, by extract information from package.json and code",
   "main": "plugin.cjs",
   "module": "plugin.esm.js",
   "author": "Curly Brackets<water.curly@outlook.com>",
+  "keywords": [
+    "auto-generate",
+    "userscript",
+    "userscript header",
+    "tampermonkey"
+  ],
   "license": "MIT",
   "files": [
     "plugin.cjs",
